--- a/nav.css
+++ b/nav.css
@@ -86,7 +86,7 @@ margin-top:8vh;
     a{
         text-decoration: none;
         color: white!important;  
-                margin-top: 25px;
+        /* margin-top: 25px; */
   
     }
    
